# projeto-despesas

./: README.md  pyproject.toml
data/: Dicionario.xlsx  carga_base.py
infrastructure/: main.tf  moved.tf  recursos.tf  terraform.tf  variables.tf
ingestion/: .env.example  meltano.yml
transformation/: bronze-to-silver.py  silver-to-gold.py
visualization/: app.py
visualization/lambda/: lambda.py
